--- a/views/lesson1.ejs
+++ b/views/lesson1.ejs
@@ -82,7 +82,7 @@ print(s)</textarea>
       <p></p>
       <p></p>
       <p></p>
-      <a class="startt-button" href="/auth/login">Пройти тест</a>
+      <a class="startt-button" href="/dashboard">Пройти тест</a>
     </section>
   </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.js"></script>
