--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,13 @@
             width: auto;
             max-width: 100%; /* Ограничиваем максимальную ширину, чтобы избежать больших размеров */
         }
-
+        header nav a {
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #333;
+}
         .main-title {
             text-align: center;
             font-size: 48px;
@@ -102,6 +108,9 @@
     <div class="logo">
         <img src="/image/logo.png" alt="PyWebbEd">
     </div>
+    <nav>
+        <a href="/dashboard">Личный кабинет</a>
+    </nav>
 </header>
 
 <main>
