--- a/views/lesson1.ejs
+++ b/views/lesson1.ejs
@@ -13,6 +13,9 @@
     <div class="logo">
       <img src="/image/logo.png" alt="PyWebbEd">
     </div>
+    <nav>
+      <a href="/dashboard">Личный кабинет</a>
+  </nav>
   </header>
   <main>
     <aside class="sidebar">
@@ -82,7 +85,7 @@ print(s)</textarea>
       <p></p>
       <p></p>
       <p></p>
-      <a class="startt-button" href="/dashboard">Пройти тест</a>
+      <a class="startt-button" href="/testik/testik">Пройти тест</a>
     </section>
   </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.js"></script>
