--- a/views/teacher_dashboard.ejs
+++ b/views/teacher_dashboard.ejs
@@ -114,7 +114,7 @@
 
           results.forEach(result => {
             const listItem = document.createElement('li');
-            listItem.innerHTML = `Student: <span>${result.user.username}</span>, Score: <span>${result.score}</span>`;
+            listItem.innerHTML = `Ученик: <span>${result.user.username}</span>, Результат: <span>${result.score}</span>`;
             resultsList.appendChild(listItem);
           });
         })
